# liblogger

./: CMakeCache.txt  CMakeLists.txt  LICENSE  LoggingConfig.cmake  LoggingTargets.cmake  Makefile  README.md  cmake_install.cmake  install_manifest.txt  liblogger.so.0.0.2  travis.yml
cmake/: LoggingConfig.cmake.in
include/logger/: logger.h
src/: logger.cpp
